[package]
name = "mutantops"
version = "0.1.0"
edition = "2021"

[dependencies]
derive = "1.0.0"
k8s-openapi = { version = "0.24.0", features = ["latest"] }
kube = { version = "0.99.0", features = ["derive", "runtime"] }
schemars = "0.8.22"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.2", features = ["rt", "rt-multi-thread", "macros"] }
async-trait = "0.1.88"
serde_json = "1.0.140"
anyhow = "1.0.98"
#sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "postgres"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
sea-orm = { version = "1.1.10", features = ["sqlx-postgres", "runtime-tokio-native-tls"] }
futures = "0.3.31"


[package.metadata.sqlx]
offline = true

[[bin]]
name = "main-deployment"